--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="top-nav">
+        <p>EN</p>
+        <p>FR</p>
+        <i class="fas fa-user"></i>
+        <i class="fas fa-shopping-basket"></i>
+    </section>
+   <header>
+        <img src="img/logo.jpg" alt="">
+        <nav>
+            <ul>
+                <a href="#nav-produits" id="btn-produits"><li>Produits</li></a>
+                <a href="#nav-heures" id="btn-heures"><li>Heures d'ouvertures</li></a>
+                <a href="#nav-livraison" id="btn-livraison"><li>Livraison</li></a>
+                <a href="#nav-entreprise" id="btn-entreprise"><li>L'entreprise</li></a>
+                <a href="#nav-contact" id="btn-contact"><li>Contact</li></a>
+            </ul>
+        </nav>
+   </header> 
+   <section class="produits" id="nav-produits">
+       
+   </section>
 </body>
 </html>
