--- a/index.html
+++ b/index.html
@@ -12,22 +12,24 @@
 </head>
 <body>
     <section class="top-nav">
-        <p>EN</p>
-        <p>FR</p>
-        <i class="fas fa-user"></i>
-        <i class="fas fa-shopping-basket"></i>
+            <p>EN</p>
+            <p>FR</p>
+            <i class="fas fa-user"></i>
+            <i class="fas fa-shopping-basket"></i>
     </section>
    <header>
-        <img src="img/logo.jpg" alt="">
-        <nav>
-            <ul>
-                <a href="#nav-produits" id="btn-produits"><li>Produits</li></a>
-                <a href="#nav-heures" id="btn-heures"><li>Heures d'ouvertures</li></a>
-                <a href="#nav-livraison" id="btn-livraison"><li>Livraison</li></a>
-                <a href="#nav-entreprise" id="btn-entreprise"><li>L'entreprise</li></a>
-                <a href="#nav-contact" id="btn-contact"><li>Contact</li></a>
-            </ul>
-        </nav>
+       <div class="nav-wrapper">
+           <img src="img/logo.jpg" alt="">
+           <nav>
+               <ul>
+                   <a href="#nav-produits" id="btn-produits"><li>Produits</li></a>
+                   <a href="#nav-heures" id="btn-heures"><li>Heures d'ouvertures</li></a>
+                   <a href="#nav-livraison" id="btn-livraison"><li>Livraison</li></a>
+                   <a href="#nav-entreprise" id="btn-entreprise"><li>L'entreprise</li></a>
+                   <a href="#nav-contact" id="btn-contact"><li>Contact</li></a>
+                </ul>
+            </nav>
+        </div>
    </header> 
    <section class="produits" id="nav-produits">
        <div class="p-intro">
@@ -110,7 +112,24 @@
         </article>
    </section>
    <footer>
-
+        <section>
+            <div>
+                <img src="" alt="">
+                <p>(450) 667-7886</p>
+                <p>1731 Rue Le Royer Laval QC</p>
+                <p>H7M 2R6</p>
+            </div>
+            <div>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+            </div>
+        </section>
+        <section>
+            <input type="text" name="Nom" placeholder="Votre nom">
+            <input type="text" name="adresse" placeholder="Votre adresse courriel">
+            <input type="text" name="message" placeholder="Tapez votre message">
+            <button type="button">Envoyer</button>
+        </section>
    </footer>
 </body>
 </html>
