base css accueil

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </article>
    </section>
    <footer>
-        <section>
+        <section class="f-infos">
             <div>
                 <img src="" alt="">
                 <p>(450) 667-7886</p>
@@ -124,7 +124,8 @@
                 <i class="fab fa-twitter"></i>
             </div>
         </section>
-        <section>
+        <section class="f-form">
+            <h3>Nous contactez</h3>
             <input type="text" name="Nom" placeholder="Votre nom">
             <input type="text" name="adresse" placeholder="Votre adresse courriel">
             <input type="text" name="message" placeholder="Tapez votre message">
