continuation css accueil

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                <ul>
                    <a href="#nav-produits" id="btn-produits"><li>Produits</li></a>
                    <a href="#nav-heures" id="btn-heures"><li>Heures d'ouvertures</li></a>
+                   <a href="#nav-promotion" id="btn-promotion"><li>Promotion</li></a>
                    <a href="#nav-livraison" id="btn-livraison"><li>Livraison</li></a>
                    <a href="#nav-entreprise" id="btn-entreprise"><li>L'entreprise</li></a>
                    <a href="#nav-contact" id="btn-contact"><li>Contact</li></a>
@@ -53,7 +54,7 @@
                 <button type="button">En savoir plus</button>
             </article>
        </div>
-       <button type="button">En savoir plus</button>
+       <button type="button" class="btn-produits">En savoir plus</button>
    </section>
    <section class="heures" id="nav-heures">
         <h2>Les heures d'ouvertures</h2>
@@ -125,7 +126,7 @@
             </div>
         </section>
         <section class="f-form">
-            <h3>Nous contactez</h3>
+            <h3>Nous contactezq</h3>
             <input type="text" name="Nom" placeholder="Votre nom">
             <input type="text" name="adresse" placeholder="Votre adresse courriel">
             <input type="text" name="message" placeholder="Tapez votre message">
