css accueil sans hover

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
    <header>
        <div class="nav-wrapper">
-           <img src="img/logo.jpg" alt="">
+           <img src="svg/logo-blanc.svg" alt="">
            <nav>
                <ul>
                    <a href="#nav-produits" id="btn-produits"><li>Produits</li></a>
@@ -103,19 +103,19 @@
        <button type="button">Vérifier</button>
    </section>
    <section class="entreprise" id="nav-entreprise">
-        <h2>Notre entreprise</h2>
+        <h2>À propos de bistro la fourchette</h2>
         <article>
             <img src="img/bistro.jpg" alt="">
             <div>
-                <p>Vestibulum tempus posuere turpis, iaculis porttitor velit semper id. Donec laoreet turpis mauris, nec dapibus nibh imperdiet vitae. Aenean lacinia placerat diam.</p>
+                <p>Vestibulum tempus posuere turpis, iaculis porttitor velit semper id. Donec laoreet turpis mauris, nec dapibus nibh imperdiet vitae. Aenean lacinia placerat diam. In lobortis molestie enim, eu porta lacus finibus eget. Morbi dictum lectus leo, vel finibus tortor venenatis et. Vivamus facilisis consequat elit. Maecenas diam libero, vehicula non risus sit amet, varius euismod neque. Nulla vitae diam hendrerit, faucibus orci in, placerat nunc. Duis scelerisque suscipit lorem vitae sollicitudin.</p>
                 <p>Congue nibh sollicitudin at.  Suspendisse et commodo tortor, at varius sem. Sed molestie velit ut venenatis hendrerit. Vivamus porta mattis ante vestibulum cursus. Vivamus eu neque nisl. Phasellus id lacinia ligula nec dapibus tellus. Praesent ultrices, felis eu tristique dignissim, est sapien vulputate ipsum, itae placerat nulla risus nec est. Maecenas rhoncus lectus id nulla venenatis, ac tincidunt sem cursus. Nulla sit amet pellentesque nisl.</p>
             </div>
         </article>
    </section>
    <footer>
         <section class="f-infos">
+            <img src="svg/logo-regulier.svg" alt="">
             <div>
-                <img src="" alt="">
                 <p>(450) 667-7886</p>
                 <p>1731 Rue Le Royer Laval QC</p>
                 <p>H7M 2R6</p>
@@ -126,7 +126,7 @@
             </div>
         </section>
         <section class="f-form">
-            <h3>Nous contactezq</h3>
+            <h3>Nous contactez</h3>
             <input type="text" name="Nom" placeholder="Votre nom">
             <input type="text" name="adresse" placeholder="Votre adresse courriel">
             <input type="text" name="message" placeholder="Tapez votre message">
