--- a/fiche.html
+++ b/fiche.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     <section class="top-nav">
-            <p>EN</p>
-            <p>FR</p>
-            <i class="fas fa-user"></i>
-            <i class="fas fa-shopping-basket"></i>
+            <a href=""><p>EN</p></a>
+            <a href=""><p>FR</p></a>
+            <a href=""><i class="fas fa-user"></i></a>
+            <a href=""><i class="fas fa-shopping-basket"></i></a>
     </section>
    <header>
        <div class="nav-wrapper">
-           <img src="svg/logo-blanc.svg" alt="">
+           <img src="svg/logo-blanc.svg" alt="Bistro la fourchette logo">
            <nav>
                <ul>
                    <a href="#nav-produits" id="btn-produits"><li>Produits</li></a>
@@ -64,9 +64,9 @@
         <article class="fiche-recommendations">
             <h3>Les plus populaires</h3>
             <div>
-                <img src="img/pennes-appercu.jpg" alt="">
-                <img src="img/burger-appercu.jpg" alt="">
-                <img src="img/brownie-appercu.jpg" alt="">
+                <img src="img/pennes-appercu.jpg" alt="Pennes alfredo">
+                <img src="img/burger-appercu.jpg" alt="burger boeuf">
+                <img src="img/brownie-appercu.jpg" alt="brownies">
             </div>
         </article>
    </section>
@@ -74,33 +74,33 @@
         <h2>Comment commander?</h2>
         <article class="etapes-livraison">
             <div class="e-1">
-                <img src="svg/tap.svg" alt="">
+                <img src="svg/tap.svg" alt="tap svg">
                 <p>Ajoutez à votre commande les items souhaités</p>
             </div>
             <div class="e-2">
-                <img src="svg/shapes.svg" alt="">
+                <img src="svg/shapes.svg" alt="confirmer svg">
                 <p>Confirmez votre commande</p>
             </div>
             <div class="e-3">
-                <img src="svg/files-and-folders.svg" alt="">
+                <img src="svg/files-and-folders.svg" alt="documents svg">
                 <p>Un représentant vous contactera pour le paiement par téléphone ou interact</p>
             </div>
             <div class="e-4">
-                <img src="svg/food-and-restaurant.svg" alt="">
+                <img src="svg/food-and-restaurant.svg" alt="hamburger svg">
                 <p>Votre commande sera ensuite livrée</p>
             </div>
         </article>
    </section>
    <section class="perimetre-livraison">
        <h2>Livraison à domicile</h2>
-       <img src="svg/maps-and-location.svg" alt="">
+       <img src="svg/maps-and-location.svg" alt="location svg">
        <p>Vérifiez si vous êtes dans le périmètre de 10 kilomètres pour la livraison</p>
        <input type="text" name="code-postal" placeholder="Votre code postal">
        <button type="button">Vérifier</button>
    </section>
    <footer>
         <section class="f-infos">
-            <img src="svg/logo-regulier.svg" alt="">
+            <img src="svg/logo-regulier.svg" alt="Bistro la fourchette logo">
             <div>
                 <p>(450) 667-7886</p>
                 <p>1731 Rue Le Royer Laval QC</p>
