--- a/liste.html
+++ b/liste.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <section class="top-nav">
-            <p>EN</p>
-            <p>FR</p>
-            <i class="fas fa-user"></i>
-            <i class="fas fa-shopping-basket"></i>
+        <a href=""><p>EN</p></a>
+        <a href=""><p>FR</p></a>
+        <a href=""><i class="fas fa-user"></i></a>
+        <a href=""><i class="fas fa-shopping-basket"></i></a>
     </section>
    <header>
        <div class="nav-wrapper">
