--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bistro la fourchette</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -37,22 +39,28 @@
             <h2>Consultez nos produits</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis semper, lacus sit amet imperdiet pulvinar, sem urna interdum odio, nec rutrum quam neque ac lacus.</p>
        </div>
-       <div class="p-liste">
-            <article class="p-1">
-                <img src="img/salade.jpg" alt="">
-                <h3>Salade du chef</h3>
-                <button type="button">En savoir plus</button>
-            </article>
-            <article class="p-2">
-                <img src="img/pates.jpg" alt="">
-                <h3>Pennes à la sauce alfredo avec tomates</h3>
-                <button type="button">En savoir plus</button>
-            </article>
-            <article class="p-3">
-                <img src="img/burger.jpg" alt="">
-                <h3>Burger avec boulette de boeuf</h3>
-                <button type="button">En savoir plus</button>
-            </article>
+       <div class="p-liste, carousel">
+           <div class="carousel-item">
+               <article class="p-1">
+                   <img src="img/salade.jpg" alt="">
+                   <h3>Salade du chef</h3>
+                   <button type="button">En savoir plus</button>
+               </article>
+           </div>
+           <div class="carousel-item">
+               <article class="p-2">
+                   <img src="img/pates.jpg" alt="">
+                   <h3>Pennes à la sauce alfredo avec tomates</h3>
+                   <button type="button">En savoir plus</button>
+               </article>
+           </div>
+           <div class="carousel-item">
+               <article class="p-3">
+                   <img src="img/burger.jpg" alt="">
+                   <h3>Burger avec boulette de boeuf</h3>
+                   <button type="button">En savoir plus</button>
+               </article>
+           </div>
        </div>
        <button type="button" class="btn-produits">Voir le menu</button>
    </section>
@@ -133,5 +141,6 @@
             <button type="button">Envoyer</button>
         </section>
    </footer>
+   <script src="js/eventAnimationScript.js"></script>
 </body>
 </html>
