--- a/liste.html
+++ b/liste.html
@@ -169,5 +169,6 @@
             <button type="button">Envoyer</button>
         </section>
    </footer>
+   <script src="js/eventAnimationScript.js"></script>
 </body>
 </html>
