--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    <header>
        <div class="nav-wrapper">
            <img src="svg/logo-blanc.svg" alt="">
-           <nav class="transparent">
+           <nav class="transparent, nav-principale">
                <ul>
                    <a href="#nav-produits" id="btn-produits"><li>Produits</li></a>
                    <a href="#nav-heures" id="btn-heures"><li>Heures d'ouvertures</li></a>
