--- a/fiche.html
+++ b/fiche.html
@@ -72,7 +72,7 @@
             </div>
         </article>
    </section>
-   <section class="livraison" id="nav-livraison">
+   <section class="livraison fade-scroll" id="nav-livraison">
         <h2>Comment commander?</h2>
         <article class="etapes-livraison">
             <div class="e-1">
