--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
        </div>
        <button type="button" class="btn-produits">Voir le menu</button>
    </section>
-   <section class="heures" id="nav-heures">
+   <section class="heures fade-scroll" id="nav-heures">
         <h2>Les heures d'ouvertures</h2>
         <div>
             <p><span class="bold">Dimanche fermé</span></p> 
@@ -77,13 +77,13 @@
             <p><span class="bold">Samedi :</span> 17h00 - 23h00</p>
         </div>
    </section>
-   <section class="promotion">
+   <section class="promotion fade-scroll">
         <div class="promo-infos">
             <h2>Promotion du mois</h2>
             <p>Choisissez parmi une de nos entrées <span class="bold">gratuitement</span> avec une commande de <span class="bold">35$ et plus</span></p>
         </div>
    </section>
-   <section class="livraison" id="nav-livraison">
+   <section class="livraison fade-scroll" id="nav-livraison">
         <h2>Comment commander?</h2>
         <article class="etapes-livraison">
             <div class="e-1">
@@ -104,7 +104,7 @@
             </div>
         </article>
    </section>
-   <section class="perimetre-livraison">
+   <section class="perimetre-livraison fade-scroll">
        <h2>Livraison à domicile</h2>
        <img src="svg/maps-and-location.svg" alt="">
        <p>Vérifiez si vous êtes dans le périmètre de 10 kilomètres pour la livraison</p>
