--- a/liste.html
+++ b/liste.html
@@ -120,7 +120,7 @@
             </article>
         </div>
    </section>
-   <section class="livraison" id="nav-livraison">
+   <section class="livraison fade-scroll" id="nav-livraison">
         <h2>Comment commander?</h2>
         <article class="etapes-livraison">
             <div class="e-1">
