--- a/liste.html
+++ b/liste.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id="top-btn"><i class="fas fa-arrow-up"></i></button>
     <section class="top-nav">
         <a href=""><p>EN</p></a>
         <a href=""><p>FR</p></a>
