--- a/fiche.html
+++ b/fiche.html
@@ -25,12 +25,12 @@
            <img src="svg/logo-blanc.svg" alt="Bistro la fourchette logo">
            <nav>
                <ul>
-                   <a href="#nav-produits" id="btn-produits"><li>Produits</li></a>
-                   <a href="#nav-heures" id="btn-heures"><li>Heures d'ouvertures</li></a>
-                   <a href="#nav-promotion" id="btn-promotion"><li>Promotion</li></a>
-                   <a href="#nav-livraison" id="btn-livraison"><li>Livraison</li></a>
-                   <a href="#nav-entreprise" id="btn-entreprise"><li>L'entreprise</li></a>
-                   <a href="#nav-contact" id="btn-contact"><li>Contact</li></a>
+                   <a href="index.html#nav-produits" id="btn-produits"><li>Produits</li></a>
+                   <a href="index.html#nav-heures" id="btn-heures"><li>Heures d'ouvertures</li></a>
+                   <a href="index.html#nav-promotion" id="btn-promotion"><li>Promotion</li></a>
+                   <a href="index.html#nav-livraison" id="btn-livraison"><li>Livraison</li></a>
+                   <a href="index.html#nav-entreprise" id="btn-entreprise"><li>L'entreprise</li></a>
+                   <a href="index.html#nav-contact" id="btn-contact"><li>Contact</li></a>
                 </ul>
             </nav>
         </div>
