--- a/liste.html
+++ b/liste.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="btn-menu">
-                    <a href="">Consulter</a>
+                    <a href="fiche.html">Consulter</a>
                 </div>
             </article>
             <article class="m-3">
