--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                </article>
            </div>
        </div>
-       <button type="button" class="btn-produits">Voir le menu</button>
+       <a href="liste.html"><button type="button" class="btn-produits">Voir le menu</button></a>
    </section>
    <section class="heures fade-scroll" id="nav-heures">
         <h2>Les heures d'ouvertures</h2>
